cmake_minimum_required(VERSION 3.17)
project(LeetcodeC)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetcodeC Easy/main.cpp "Meduim/16 3Sum Closest.cpp" "Meduim/19 Remove Nth Node From End of List.cpp" Meduim/ListNode.h "Meduim/24 Swap Nodes in Pairs.cpp" "Meduim/17 Letter Combinations of a Phone Number.cpp" "Meduim/46 Permutations.cpp" "Meduim/64 Minimum Path Sum.cpp")