cmake_minimum_required(VERSION 3.17)
project(LeetcodeC)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetcodeC Easy/main.cpp "Meduim/16 3Sum Closest.cpp" "Meduim/19 Remove Nth Node From End of List.cpp" Meduim/ListNode.h "Meduim/24 Swap Nodes in Pairs.cpp" "Meduim/17 Letter Combinations of a Phone Number.cpp" "Meduim/46 Permutations.cpp" "Meduim/64 Minimum Path Sum.cpp" "Meduim/49 Group Anagrams.cpp" "Meduim/142 Linked List Cycle II .cpp" "Meduim/198 House Robber.cpp" "Meduim/62 Unique Paths.cpp" "Meduim/236 Lowest Common Ancestor of a Binary Tree.cpp" Meduim/TreeNode.h "Meduim/347 Top K Frequent Elements.cpp" "Meduim/560 Subarray Sum Equals K.cpp" "Meduim/3 Longest Substring Without Repeating Characters.cpp" "Meduim/416 Partition Equal Subset Sum.cpp" "Meduim/494 Target Sum.cpp" "Meduim/207 Course Schedule.cpp" "Meduim/338. Counting Bits.cpp" "Easy/234 Palindrome Linked List.cpp" "Easy/剑指 Offer 10- I 斐波那契数列  LCOF.cpp" "Easy/剑指 Offer 53 - II 0～n-1中缺失的数字.cpp" "Easy/680 Valid Palindrome II.cpp")